# AVR8Sharp

./: AVR8Sharp.sln  CHANGELOG.md  LICENSE  LICENSE-BUSL.txt  NOTICE.txt  NuGet.Config  README.md
.github/workflows/: build-nugets.yml  ci.yml  publish.yml
AVR8Sharp/Cpu/: Instruction.cs
AVR8Sharp/Peripherals/: Adc.cs  Clock.cs  Timer.cs  Usart.cs  Usi.cs  Watchdog.cs
AVR8Sharp/Utils/: Assembler.cs
bindings/python/: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES  hatch_build.py  pyproject.toml
bindings/python/src/avr8sharp/: __init__.py  _native.py  errors.py  simulation.py
bindings/python/tests/: test_smoke.py
bindings/python/tests/fixtures/: serial_hello.hex
docs/: README.md  conf.py  index.md  package.json
docs/compat/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: ci-validation.md  custom-boards.md  end-to-end.md  index.md  patterns.md  testkit.md
docs/peripherals/: board-maps.md  index.md
docs/reference/: assertions.md  index.md
memory/: MEMORY.md  testkit.md
src/: AVR8Sharp.sln
src/AVR8Sharp/: AVR8Sharp.csproj
src/AVR8Sharp.Core/: AVR8Sharp.Core.csproj
src/Avr8Sharp/: Avr8Sharp.csproj
src/Avr8Sharp.Benchmark/: Avr8Sharp.Benchmark.csproj  Program.cs  blink.hex
src/Avr8Sharp.Demo/: Avr8Sharp.Demo.csproj  Program.cs
src/Avr8Sharp.Native/: Avr8Sharp.Native.csproj  DeviceStubs.cs  Exports.cs  NativeSession.cs
src/Avr8Sharp.TestKit/: Avr8Sharp.TestKit.csproj  AvrMemoryView.cs  AvrTestSimulation.cs  Class1.cs
src/Avr8Sharp.TestKit.Core/: Avr8Sharp.TestKit.Core.csproj
tests/Avr8Sharp.TestKit.Samples/: ATtiny85Samples.cs  ArduinoMegaSamples.cs  ArduinoUnoSamples.cs  Avr8Sharp.TestKit.Samples.csproj  LowLevelSamples.cs  Placeholders.cs
tests/Avr8Sharp.Tests/: AdcTests.cs  ArduinoTests.cs  (+17 more)
tools/: verify_packages.py
(+90 files in other folders)
